# FFmpegAudioPlayer

./: README.md  build.gradle  build_android_all.sh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/io/github/iamyours/ffmpegaudioplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mix.xmp
app/src/main/cpp/: AudioPlayer.cpp  AudioPlayer.h  audio-mix.cpp  audio_encode.cpp  native-lib.cpp  opensles-test.cpp  player-test.cpp  wave_player.cpp
app/src/main/java/io/github/iamyours/ffmpegaudioplayer/: ByteUtil.java  Callback.java  FFmpegAudioPlayer.kt  FFmpegAudioRecorder.kt  FFmpegPlayerActivity.kt  FileUtil.java  MainActivity.kt  WaveDataCallback.java  WavePlayerActivity.kt
app/src/main/java/io/github/iamyours/ffmpegaudioplayer/view/: AudioData.java  LineRenderer.java  Renderer.java  VisualizerView.java  WaveView.java
app/src/main/jniLibs/include/libavutil/: ffversion.h
app/src/main/res/layout/: activity_ffmpeg_player.xml  activity_main.xml  activity_wave_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/github/iamyours/ffmpegaudioplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
